--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ google-auth==1.35.0
 google-auth-oauthlib==0.4.6
 grpcio==1.40.0
 idna==3.2
+ipdb==0.13.9
 ipykernel==6.4.0
 ipython==7.27.0
 ipython-genutils==0.2.0
@@ -29,6 +30,7 @@ llvmlite==0.37.0
 Markdown==3.3.4
 matplotlib==3.4.3
 matplotlib-inline==0.1.3
+mdct==0.4
 natsort==7.1.1
 nest-asyncio==1.5.1
 nnAudio==0.2.6
@@ -64,13 +66,17 @@ seaborn==0.11.2
 six==1.14.0
 sklearn==0.0
 SoundFile==0.10.3.post1
+stft==0.5.2
 tensorboard==2.6.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 threadpoolctl==2.2.0
-torch==1.9.0
+toml==0.10.2
+torch==1.9.1
 torchopenl3==1.0.0
+torchvision==0.10.1
 tornado==6.1
+tqdm==4.62.3
 traitlets==5.1.0
 typing-extensions==3.10.0.2
 umap-learn==0.5.1
